objects/Contreparties__c.object
<CustomObject>
    <fields>
        <fullName>Action_realise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action réalisée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commentaire_contrepartie__c</fullName>
        <label>Commentaire contrepartie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contreparties</relationshipLabel>
        <relationshipName>Contreparties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contreparties</relationshipLabel>
        <relationshipName>Contreparties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrepartie__c</fullName>
        <label>Contrepartie</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Programme__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Plaque collective</fullName>
                </value>
                <value>
                    <fullName>Plaque 0,1 x 0,1 m Hall of Fame</fullName>
                </value>
                <value>
                    <fullName>Plaque 0,2 x 0,2 m Hall of Fame</fullName>
                </value>
                <value>
                    <fullName>Plaque 0,3 x 0,2 m Hall of Fame</fullName>
                </value>
                <value>
                    <fullName>Plaque 0,5 x 0,2 m Hall of Fame</fullName>
                </value>
                <value>
                    <fullName>Plaque 0,5 x 0,5 m Hall of Fame</fullName>
                </value>
                <value>
                    <fullName>Panneau 1 m x 1 m Hall of Fame</fullName>
                </value>
                <value>
                    <fullName>1 ouvrage dédicacé d’un professeur EMLYON</fullName>
                </value>
                <value>
                    <fullName>2 ouvrages dédicacés de professeurs EMLYON</fullName>
                </value>
                <value>
                    <fullName>3 ouvrages dédicacés de professeurs EMLYON</fullName>
                </value>
                <value>
                    <fullName>5 ouvrages dédicacés de professeurs EMLYON</fullName>
                </value>
                <value>
                    <fullName>Tous ouvrages publiés</fullName>
                </value>
                <value>
                    <fullName>Gratuité 1 Soirée Performance</fullName>
                </value>
                <value>
                    <fullName>Gratuité 2 Soirées Performance</fullName>
                </value>
                <value>
                    <fullName>Gratuité Soirées Performance</fullName>
                </value>
                <value>
                    <fullName>Adhésion à vie EMLYON FOREVER</fullName>
                </value>
                <value>
                    <fullName>Prise de parole à 1 remise des annuaires EMLYON FOREVER</fullName>
                </value>
                <value>
                    <fullName>Prise de parole à la cérémonie de remise des diplômes</fullName>
                </value>
                <value>
                    <fullName>Gratuité Forum</fullName>
                </value>
                <value>
                    <fullName>Citation sur toutes les publications</fullName>
                </value>
                <value>
                    <fullName>Membre du jury Meilleur projet Etudiant, meilleur travail de recherche</fullName>
                </value>
                <value>
                    <fullName>1 journée de recrutement par an</fullName>
                </value>
                <value>
                    <fullName>Membre Internationnal Advisory Board</fullName>
                </value>
                <value>
                    <fullName>Citations sur Publications Corporate</fullName>
                </value>
                <value>
                    <fullName>Accès VIP gratuit aux manifestations EMLYON</fullName>
                </value>
                <value>
                    <fullName>2 journées par an de recrutement et de présentation</fullName>
                </value>
                <value>
                    <fullName>Mention du nom sur le mur des donateurs</fullName>
                </value>
                <value>
                    <fullName>Mention du nom sur le site de la Fondation</fullName>
                </value>
                <value>
                    <fullName>Certificat de donateur</fullName>
                </value>
                <value>
                    <fullName>Envoi du rapport annuel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_realisation__c</fullName>
        <label>Date de réalisation de l&apos;action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_sur_mesure__c</fullName>
        <label>Détail sur mesure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme de reconnaissance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_contrepartie__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>B2C_Niveau Zéro</fullName>
                </value>
                <value>
                    <fullName>B2B_Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>B2C_Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>B2B_Kilimandjaro</fullName>
                </value>
                <value>
                    <fullName>B2C_Kilimandjaro</fullName>
                </value>
                <value>
                    <fullName>B2B_McKinley</fullName>
                </value>
                <value>
                    <fullName>B2C_McKinley</fullName>
                </value>
                <value>
                    <fullName>B2B_Annapura</fullName>
                </value>
                <value>
                    <fullName>B2C_Annapura</fullName>
                </value>
                <value>
                    <fullName>B2B_K2</fullName>
                </value>
                <value>
                    <fullName>B2C_K2</fullName>
                </value>
                <value>
                    <fullName>B2B_Everest</fullName>
                </value>
                <value>
                    <fullName>B2C_Everest</fullName>
                </value>
                <value>
                    <fullName>B2B_Cercle du Président</fullName>
                </value>
                <value>
                    <fullName>B2C_Cercle du Président</fullName>
                </value>
                <value>
                    <fullName>B2C_Contrepartie sur-mesure</fullName>
                </value>
                <value>
                    <fullName>B2B_Contrepartie sur-mesure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_contrepartie__c</fullName>
        <label>Type contrepartie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contrepartie</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nom de Contreparties</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contreparties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>